--- a/juststreamit.html
+++ b/juststreamit.html
@@ -1,20 +1,33 @@
-< .DOCTYPE html>
+<!DOCTYPE html>
 <html>
 	<head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style.css" />
 
-        <script src="carrousel.js" defer></script>
-        <script src="main.js" defer></script>
+
+        <script type="module" src="main.js" ></script>
 
         <title>Just stream It</title>
     </head>
-    <body>
-		<div id="contener1"></div>
-		<div id="contener2"></div>
-		<div id="contener3"></div>
-		<div id="contener4"></div>
+	<body>
+		<div class="container">	
+			<div id="container1"></div>
+			<div id="container2"></div>
+			<div id="container3"></div>
+			<div id="container4"></div>
+		</div>
+	</body>
 
-    </body>
+
+<!-- The Modal -->
+<div id="detailsContener" class="modal">
+
+  <!-- Modal content -->
+  <div id="details" class="modal-content">
+    <span class="close">&times;</span>
+  </div>
+
+</div>
+
 
 </html>
