Update after session

--- a/juststreamit.html
+++ b/juststreamit.html
@@ -10,7 +10,13 @@
         <title>Just stream It</title>
     </head>
 	<body>
+
+		<div id="bestMovie">
+		</div>
+
+
 		<div class="container">	
+
 			<div id="container1"></div>
 			<div id="container2"></div>
 			<div id="container3"></div>
@@ -20,11 +26,12 @@
 
 
 <!-- The Modal -->
-<div id="detailsContener" class="modal">
-
-  <!-- Modal content -->
-  <div id="details" class="modal-content">
-    <span class="close">&times;</span>
+<div id="detailContainer">
+	<div id="detailContent">
+		<header id="detailHeader"></header>
+		<section id="detailMain"></section>
+		<footer id="detailFoot"></footer>
+	</div>	  
   </div>
 
 </div>
