--- a/juststreamit.html
+++ b/juststreamit.html
@@ -3,8 +3,6 @@
 	<head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style.css" />
-
-
         <script type="module" src="main.js" ></script>
 
         <title>Just stream It</title>
@@ -12,11 +10,11 @@
 	<body>
 
 		<div id="bestMovie">
+			<div id=bestText></div>
+			<div id=bestCover></div>
 		</div>
 
-
-		<div class="container">	
-
+		<div class="container" id="test">	
 			<div id="container1"></div>
 			<div id="container2"></div>
 			<div id="container3"></div>
