--- a/juststreamit.html
+++ b/juststreamit.html
@@ -20,19 +20,18 @@
 			<div id="container3"></div>
 			<div id="container4"></div>
 		</div>
+
+		<!-- Details Modal -->
+		<div id="detailContainer">
+			<div id="detailContent">
+				<header id="detailHeader"></header>
+				<section id="detailMain"></section>
+				<footer id="detailFoot"></footer>
+			</div>	  
+		</div>
+
 	</body>
 
-
-<!-- The Modal -->
-<div id="detailContainer">
-	<div id="detailContent">
-		<header id="detailHeader"></header>
-		<section id="detailMain"></section>
-		<footer id="detailFoot"></footer>
-	</div>	  
-  </div>
-
-</div>
 
 
 </html>
