Add responsive effect

--- a/juststreamit.html
+++ b/juststreamit.html
@@ -2,8 +2,12 @@
 <html>
 	<head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="style.css" />
-        <script type="module" src="main.js" ></script>
+        <link rel="stylesheet" href="style/general.css" />
+        <link rel="stylesheet" href="style/best.css" />
+        <link rel="stylesheet" href="style/carousel.css" />
+        <link rel="stylesheet" href="style/detail.css" />
+        <script type="module" src="/javascript/main.js" ></script>
+		<link rel="icon" type="image/png" href="favicon.png">
 
         <title>Just stream It</title>
     </head>
@@ -27,11 +31,7 @@
 				<header id="detailHeader"></header>
 				<section id="detailMain"></section>
 				<footer id="detailFoot"></footer>
-			</div>	  
+			</div>
 		</div>
-
 	</body>
-
-
-
 </html>
