--- a/juststreamit.html
+++ b/juststreamit.html
@@ -18,7 +18,7 @@
 			<div id=bestCover></div>
 		</div>
 
-		<div class="container" id="test">	
+		<div class="container">	
 			<div id="container1"></div>
 			<div id="container2"></div>
 			<div id="container3"></div>
