--- a/juststreamit.html
+++ b/juststreamit.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
         <meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" href="style/general.css" />
         <link rel="stylesheet" href="style/best.css" />
         <link rel="stylesheet" href="style/carousel.css" />
         <link rel="stylesheet" href="style/detail.css" />
         <script type="module" src="/javascript/main.js" ></script>
-		<link rel="icon" type="image/png" href="favicon.png">
+		<link rel="icon" type="image/png" href="favicon.png" />
 
         <title>Just stream It</title>
     </head>
